[tool.poetry]
name = "dipcoin"
version = "0.1.0"
description = ""
authors = ["Pause <101114886+pause125@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pysui = "^0.81.0"
requests = "^2.31.0"
pydantic = "^2.11.1"
canoser = "^0.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
