[tool.poetry]
name = "dipcoin"
version = "0.1.0"
description = ""
authors = ["DipCoinLab"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pysui = "^0.81.0"
requests = "^2.31.0"
pydantic = "^2.11.1"
canoser = "^0.8.2"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.8"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
